--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -9,8 +9,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-            crossorigin="anonymous"
-    />
+            crossorigin="anonymous"/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
     <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
 
@@ -19,7 +18,6 @@
 <body class="container">
 <!--<th:block th:insert="~{fragment/user/organisation :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>
-
 
 <script type="text/javascript" th:src="@{/js/organisation/organisation.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
