--- a/web/src/main/resources/templates/worker/manageUtilitiesOfWorker.html
+++ b/web/src/main/resources/templates/worker/manageUtilitiesOfWorker.html
@@ -27,7 +27,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="text-center p-2">Назначить услуги</p>
+        <p class="text-center p-2" th:text="'Назначить услуги: ' + ${worker.firstName} + ' ' + ${worker.lastName}"></p>
     </div>
 
 
