--- a/web/src/main/resources/templates/utility/utilities.html
+++ b/web/src/main/resources/templates/utility/utilities.html
@@ -17,9 +17,9 @@
 </head>
 <body class="container">
 
-<!--<th:block th:insert="~{fragment/user/utilities :: body}"></th:block>-->
+<th:block th:insert="~{fragment/user/utilities :: body}"></th:block>
 <!--<th:block th:insert="~{fragment/redactor/utilities :: body}"></th:block>-->
-<th:block th:insert="~{fragment/admin/utilities :: body}"></th:block>
+<!--<th:block th:insert="~{fragment/admin/utilities :: body}"></th:block>-->
 
 <script type="text/javascript" th:src="@{/js/utility/utilities.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
