--- a/web/src/main/resources/templates/worker/workers.html
+++ b/web/src/main/resources/templates/worker/workers.html
@@ -16,8 +16,8 @@
 </head>
 <body class="container">
 
-<th:block th:insert="~{fragment/user/workers :: body}"></th:block>
-<!--<th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>-->
+<!--<th:block th:insert="~{fragment/user/workers :: body}"></th:block>-->
+<th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>
 <!--<th:block th:insert="~{fragment/admin/workers :: body}"></th:block>-->
 
 <script type="text/javascript" th:src="@{/js/worker/workers.js}"></script>
