--- a/web/src/main/resources/templates/fragment/admin/home.html
+++ b/web/src/main/resources/templates/fragment/admin/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:float="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block th:fragment="body">
     <div
@@ -7,7 +7,7 @@
             style="background-color: rgb(255, 255, 255)"
     >
         <div class="col-10 d-flex flex-column">
-            <p class="org_name text-center p-2">Welcome Admin</p>
+            <p class="org_name text-center p-2" th:text="#{greeting}"></p>
         </div>
         <img th:src="@{/img/person.svg}" class="d-block mx-auto"
              width="35">
@@ -17,7 +17,7 @@
         <div class="d-flex">
             <img th:src="@{/img/people.svg}" class="d-block mx-auto"
                  width="30">
-            <p class="p-1 my-3 text-center">Организации</p>
+            <p class="p-1 my-3 text-center" th:text="#{organisations}"></p>
         </div>
     </div>
 
@@ -25,7 +25,7 @@
         <div class="d-flex">
             <img th:src="@{/img/people.svg}" class="d-block mx-auto"
                  width="30">
-            <p class="p-1 my-3 text-center">Профили</p>
+            <p class="p-1 my-3 text-center" th:text="#{profiles}">Профили</p>
         </div>
     </div>
 
